@@ -107,7 +107,7 @@ fi
 	
 # Neo4j mode
 if [ "$is_neo4j" != '' ]; then
-	[[ "$MAVEN_ARGS" =~ '-P' ]] || MAVEN_ARGS='-Pdocker'
+	[[ "$MAVEN_ARGS" =~ '-P' ]] || MAVEN_ARGS="$MAVEN_ARGS -Pdocker"
 	MAVEN_ARGS="$MAVEN_ARGS -Pneo4j"
 	# As you see, all the Maven properties used in the POMs (and, from there in other files) can be overridden from
 	# the maven command line. So, this is a way to customise things like local installations, and doing so while
@@ -122,7 +122,7 @@ fi
 # Typically you DO WANT this.
 # 
 # Default JAVA_TOOL_OPTIONS is:
-#   -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1
+#   -XX:MaxRAMPercentage=90.0
 # which tells the JVM to use all the RAM passed to the container
 #
 echo -e "\n"
